deploy-v1.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app-v1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: my-app-v1
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d/    # Place in container
      volumes:
      - name: config
        configMap:
          name: my-configmap-v1
...
---
apiVersion: v1
kind: Service
metadata:
  name: my-service-v1
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: my-app-v1
  type: ClusterIP
...
