ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host:  web1.surfsupsnir.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service-v1
            port:
              number: 80
  - host:   web2.surfsupsnir.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-service-v2
            port:
              number: 80
